# cmake_swig_wheel_test

./: CMakeLists.txt  FindNumPy.cmake  numpy.i  setup.py  test.cpp  test.flac  test.hpp  test.i  test.py  test_multiply.py
